(web) use docker to build dist files

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -3,16 +3,16 @@ FROM node:5-slim
 ARG UID
 ARG GID
 
-RUN groupadd jenkins --gid=$GID && useradd jenkins --uid=$UID --gid=$GID --create-home --shell=/bin/sh ;\
-    mkdir -p /app
+RUN mkdir -p /app
 
 EXPOSE 3000
+
 COPY package.json /app/
 
 WORKDIR /app
 
 RUN npm install --production ; npm cache clear
 
-COPY . /app
+VOLUME ["/app/dist"]
 
-RUN npm run build
+COPY . /app
