--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-plugin-add-module-exports": "^0.1.2",
     "bootstrap-sass": "3.3.6",
     "clean-webpack-plugin": "^0.1.8",
     "css-loader": "^0.18.0",
@@ -25,7 +26,7 @@
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.8.1",
     "jquery": "^3.1.0",
-    "jquery-validation": "^1.15.1",
+    "jquery-validation": "1.15.0",
     "node-sass": "^3.3.2",
     "react": "0.14.8",
     "react-dom": "0.14.8",
