--- a/web/package.json
+++ b/web/package.json
@@ -4,9 +4,9 @@
   "description": "gravitational custom installer step",
   "main": "index.js",
   "scripts": {
-    "dev": "node webpack.dev.config.js",
+    "dev": "node devServer.js",
     "start": "node src/server/index.js",
-    "build": "node node_modules/webpack/bin/webpack.js"
+    "build": "rm -rf ./dist/*; node node_modules/webpack/bin/webpack.js"
   },
   "author": "",
   "license": "",
@@ -18,7 +18,6 @@
     "babel-preset-react": "^6.5.0",
     "babel-plugin-add-module-exports": "^0.1.2",
     "bootstrap-sass": "3.3.6",
-    "clean-webpack-plugin": "^0.1.8",
     "css-loader": "^0.18.0",
     "eslint": "2.2.0",
     "eslint-loader": "^1.3.0",
