--- a/app/resources/install.yaml
+++ b/app/resources/install.yaml
@@ -10,6 +10,7 @@ spec:
     app: bandwagon
   ports:
     - port: 80
+      targetPort: 8000
 ---
 apiVersion: v1
 kind: Pod
@@ -23,3 +24,5 @@ spec:
     - name: bandwagon
       image: bandwagon:1.0.0
       imagePullPolicy: Always
+      ports:
+        - containerPort: 8000
