--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "babel-plugin-add-module-exports": "^0.1.2",
     "bootstrap-sass": "3.3.6",
     "css-loader": "^0.18.0",
@@ -29,8 +30,7 @@
     "node-sass": "^3.3.2",
     "react": "0.14.8",
     "react-dom": "0.14.8",
-    "react-hot-loader": "^1.3.0",
-    "react-addons-linked-state-mixin": "0.14.8",
+    "react-hot-loader": "^1.3.0",    
     "sass-loader": "^2.0.1",
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.7",
