--- a/web/package.json
+++ b/web/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "gravitational custom installer step",
   "main": "index.js",
-  "scripts": {
-    "dev": "node devServer.js",
-    "start": "node src/server/index.js",
+  "scripts": {    
     "build": "rm -rf ./dist/*; node node_modules/webpack/bin/webpack.js"
   },
   "author": "",
@@ -30,7 +28,7 @@
     "node-sass": "^3.3.2",
     "react": "0.14.8",
     "react-dom": "0.14.8",
-    "react-hot-loader": "^1.3.0",    
+    "react-hot-loader": "^1.3.0",
     "sass-loader": "^2.0.1",
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.7",
@@ -38,9 +36,10 @@
     "font-awesome": "4.5.0"
   },
   "devDependencies": {
-    "serve-static": "^1.3.2",
     "body-parser": "^1.9.0",
     "express": "4.x",
+    "minimist": "^1.2.0",
+    "serve-static": "^1.3.2",
     "source-map-loader": "^0.1.5",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-dev-server": "^1.10.1"
