--- a/app/resources/app.yaml
+++ b/app/resources/app.yaml
@@ -1,13 +1,12 @@
-apiVersion: v1
+apiVersion: bundle.gravitational.io/v2
 kind: SystemApplication
 metadata:
   name: bandwagon
+  resourceVersion: "0.0.0"
   namespace: kube-system
-  repository: gravitational.io
-  resourceVersion: 1.0.4
 hooks:
   install:
-    spec:
+    job: |
       apiVersion: batch/v1
       kind: Job
       metadata:
