--- a/app/resources/install.yaml
+++ b/app/resources/install.yaml
@@ -12,31 +12,40 @@ spec:
     - port: 80
       targetPort: 8000
 ---
-apiVersion: v1
-kind: Pod
+apiVersion: extensions/v1beta1
+kind: Deployment
 metadata:
   name: bandwagon
   namespace: kube-system
   labels:
     app: bandwagon
 spec:
-  containers:
-    - name: bandwagon
-      image: bandwagon:0.0.0
-      ports:
-        - containerPort: 8000
-      env:
-        - name: PATH
-          value: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/opt/bin"
-      volumeMounts:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: bandwagon
+  template:
+    metadata:
+      labels:
+        app: bandwagon
+    spec:
+      containers:
+        - name: bandwagon
+          image: bandwagon:0.0.0
+          ports:
+            - containerPort: 8000
+          env:
+            - name: PATH
+              value: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/opt/bin"
+          volumeMounts:
+            - name: bin
+              mountPath: /opt/bin
+            - name: gravity
+              mountPath: /var/lib/gravity/local
+      volumes:
         - name: bin
-          mountPath: /opt/bin
+          hostPath:
+            path: /usr/bin
         - name: gravity
-          mountPath: /var/lib/gravity/local
-  volumes:
-    - name: bin
-      hostPath:
-        path: /usr/bin
-    - name: gravity
-      hostPath:
-        path: /var/lib/gravity/local
+          hostPath:
+            path: /var/lib/gravity/local
