--- a/app/resources/install.yaml
+++ b/app/resources/install.yaml
@@ -29,6 +29,8 @@ spec:
       labels:
         app: bandwagon
     spec:
+      securityContext:
+        runAsUser: 1000
       containers:
         - name: bandwagon
           image: bandwagon:0.0.0
