--- a/app/resources/install.yaml
+++ b/app/resources/install.yaml
@@ -31,11 +31,11 @@ spec:
       annotations:
         seccomp.security.alpha.kubernetes.io/pod: docker/default
     spec:
-     tolerations:
-      - key: level
-        value: gravitational.io/system
-        operator: Equal
-        effect: NoExecute
+      tolerations:
+        - key: "gravitational.io/runlevel"
+          value: system
+          operator: Equal
+          effect: NoExecute
       securityContext:
         runAsUser: 1000
       containers:
