Schedule bandwagon Pods only on control plane nodes. Updates https://github.com/gravitational/telekube/issues/3532.

--- a/app/resources/install.yaml
+++ b/app/resources/install.yaml
@@ -31,6 +31,9 @@ spec:
       annotations:
         seccomp.security.alpha.kubernetes.io/pod: docker/default
     spec:
+      # schedule on master nodes
+      nodeSelector:
+        gravitational.io/k8s-role: master
       tolerations:
         - key: "gravitational.io/runlevel"
           value: system
