--- a/web/package.json
+++ b/web/package.json
@@ -3,45 +3,45 @@
   "version": "1.0.1",
   "description": "gravitational custom installer step",
   "main": "index.js",
-  "scripts": {    
+  "scripts": {
+    "start": "node node_modules/webpack/bin/webpack.js --progress --config webpack.config; node devServer.js",
     "build": "rm -rf ./dist/*; node node_modules/webpack/bin/webpack.js"
   },
   "author": "",
   "license": "",
   "dependencies": {
-    "babel-core": "^6.7.2",
-    "babel-eslint": "^6.0.2",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-plugin-add-module-exports": "^0.1.2",
     "bootstrap-sass": "3.3.6",
-    "css-loader": "^0.18.0",
-    "eslint": "2.2.0",
-    "eslint-loader": "^1.3.0",
-    "eslint-plugin-react": "^4.2.1",
-    "file-loader": "^0.8.5",
-    "html-webpack-plugin": "^2.8.1",
+    "font-awesome": "4.5.0",
     "jquery": "^3.1.0",
     "jquery-validation": "1.15.0",
-    "node-sass": "^3.3.2",
     "react": "0.14.8",
-    "react-dom": "0.14.8",
+    "react-dom": "0.14.8"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "2.30.1",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^6.0.2",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^2.0.1",
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.7",
-    "webpack": "^1.4.13",
-    "font-awesome": "4.5.0"
-  },
-  "devDependencies": {
-    "body-parser": "^1.9.0",
-    "express": "4.x",
+    "body-parser": "^1.18.3",
+    "node-sass": "4.9.2",
+    "express": "^4.16.3",
     "minimist": "^1.2.0",
-    "serve-static": "^1.3.2",
+    "serve-static": "^1.13.2",
     "source-map-loader": "^0.1.5",
-    "webpack-dev-middleware": "^1.5.1",
-    "webpack-dev-server": "^1.10.1"
+    "webpack": "1.15.0",
+    "webpack-dev-server": "1.16.5",
+    "css-loader": "^0.18.0",
+    "eslint": "2.2.0",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-react": "^4.2.1",
+    "file-loader": "^0.8.5"
   }
 }
