Address review comments.

--- a/images/Makefile
+++ b/images/Makefile
@@ -1,10 +1,6 @@
 HOOK_TAG := bandwagon-hook:$(VERSION)
+BASH := /bin/bash
 
 .PHONY: hook
 hook:
-	$(eval CHANGESET = $(shell echo $$VERSION | sed -e 's/[\.]//g'))
-	if [ -z "$(CHANGESET)" ]; then \
-	  echo "VERSION is not set"; exit 1; \
-	fi;
-	docker build --pull -t $(HOOK_TAG) \
-		--build-arg CHANGESET=bandwagon-$(CHANGESET) hook
+	HOOK_TAG=$(HOOK_TAG) $(BASH) hook.sh
