--- a/app/resources/install.yaml
+++ b/app/resources/install.yaml
@@ -12,7 +12,7 @@ spec:
     - port: 80
       targetPort: 8000
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: bandwagon
